--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "express": "^4.16.3",
     "mongoose": "^5.2.3",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/compiler-cli": "^6.0.3",
+    "typescript": "~2.7.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
