--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,18 @@
 version: '2.1'
 
 services:
-  mean-example:
-    build: .
+  nginx:
+    build:
+      context: .
+      dockerfile: Dockerfile-nginx
+    ports:
+      - 80:80
+    depends_on:
+      - express
+  express:
+    build:
+      context: .
+      dockerfile: Dockerfile-express
     ports:
       - 3000:3000
     depends_on:
