--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
       dockerfile: Dockerfile-frontend
     ports:
       - 80:80
+    environment:
+      - APP_HOST=backend
+      - APP_PORT=3000
+    command: /bin/sh -c "envsubst '$$APP_HOST$$APP_PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
     depends_on:
       - backend
   backend:
