--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "prestart": "npm run build",
     "start-ng": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "npm run build"
   },
   "private": true,
   "dependencies": {
@@ -27,14 +27,14 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mongoose": "^5.2.3",
-    "rxjs": "^6.0.0",
+    "rxjs": "6.2.1",
     "zone.js": "^0.8.26",
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/compiler-cli": "^6.0.3",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "@angular/cli": "~6.0.8"
   },
   "devDependencies": {
-    "@angular/cli": "~6.0.8",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
